fix z-index issues

--- a/material-overrides/assets/stylesheets/wormhole.css
+++ b/material-overrides/assets/stylesheets/wormhole.css
@@ -173,8 +173,8 @@ nav {
 
 /* To align with Wormhole website */
 .md-header {
-  padding: 1.6em 0;
   /* Make header a little thicker */
+  padding: 1.6em 0;
 }
 
 [dir='ltr'] .md-header__title {
@@ -1317,13 +1317,19 @@ label[for='__search']:hover {
   position: fixed;
   right: 0;
   top: 60%;
-  z-index: 3;
+  /* Set z-index to be the same value as the header */
+  z-index: 4;
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
   padding: 24px 16px;
   gap: 24px;
+}
+
+/* Set the z-index to be greater than .cookbook-widget when search is active */
+[data-md-toggle=search]:checked~.md-header {
+  z-index: 5;
 }
 
 .md-typeset .cookbook-widget__text {
